--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -8,7 +8,7 @@
     C'est dans cet espace que vous allez pouvoir gérer toutes vos informations.
 
     <hr>
-    - Modifier mon mot de passe <br>
+    - <a href="{{ path('account_password') }}">Modifier mon mot de passe</a> <br>
     - Ajouter mes adresses <br>
     - Mes commandes <br>
     <hr>
