[SECTION_5][COURS_33] Création de la vue produit

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,9 +9,8 @@
     <title>{% block title %}La boutique française - 100% made in France{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/css/boutiquefrancaise.css') }}">
-
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -44,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Nos produits</a>
+                    <a class="nav-link" href="{{ path('products') }}">Nos produits</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Qui sommes-nous ?</a>
