--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -21,7 +21,7 @@
                 {{ product.description }}
             </p>
 
-            <button class="btn btn-primary">Ajouter au panier</button>
+            <a href="{{ path('add_to_card', {'id' : product.id }) }}" class="btn btn-primary">Ajouter au panier</a>
         </div>
     </div>
 {% endblock %}
