--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -9,7 +9,7 @@
 
     <hr>
     - <a href="{{ path('account_password') }}">Modifier mon mot de passe</a> <br>
-    - Ajouter mes adresses <br>
+    - <a href="{{ path('account_address') }}">Gérer mes adressses</a> <br>
     - Mes commandes <br>
     <hr>
 {% endblock %}
