[SECTION_8][COURS_44] Gestion de la commande (transporteurs & adresses)

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -56,7 +56,7 @@
         <div class="text-right mb-5">
             <strong>Nombre de produits :</strong> {{ total }}<br>
             <strong>Total de mon panier :</strong> {{ (price / 100)|number_format(2, ',', '.') }} €
-            <a href="" class="btn btn-success btn-block mt-3">Valider mon panier</a>
+            <a href="{{ path('order') }}" class="btn btn-success btn-block mt-3">Valider mon panier</a>
         </div>
     {% else %}
         <div class="alert alert-info" role="alert">
