[SECTION_9][COURS_51] Intégration Stripe

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/css/boutiquefrancaise.css') }}">
+    {% block javascript %}{% endblock %}
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -164,4 +165,5 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
 </body>
+{% block script %}{% endblock %}
 </html>
