--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -87,14 +87,18 @@
         var checkoutButton = document.getElementById('checkout-button');
 
         checkoutButton.addEventListener('click', function () {
-            fetch('/commande/create-session', {
+            fetch('/commande/create-session/{{ reference }}', {
                 method: 'POST',
             })
                 .then(function (response) {
                     return response.json();
                 })
                 .then(function (session) {
-                    return stripe.redirectToCheckout({sessionId: session.id});
+                    if (session.error == 'order') {
+                        window.location.replace('{{ path('order') }}');
+                    } else {
+                        return stripe.redirectToCheckout({sessionId: session.id});
+                    }
                 })
                 .then(function (result) {
                     if (result.error) {
