[SECTION_9][COURS_54] Afficher les commandes dans l'espace membre

--- a/templates/order_success/index.html.twig
+++ b/templates/order_success/index.html.twig
@@ -22,5 +22,5 @@
 
     <hr>
 
-    Pour suivre votre commande, rendez-vous sur <a href="{{ path('account') }}">votre compte</a> !
+    Pour suivre votre commande, rendez-vous sur <a href="{{ path('account-order') }}">votre compte</a> !
 {% endblock %}
