--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -10,6 +10,6 @@
     <hr>
     - <a href="{{ path('account_password') }}">Modifier mon mot de passe</a> <br>
     - <a href="{{ path('account_address') }}">Gérer mes adressses</a> <br>
-    - Mes commandes <br>
+    - <a href="{{ path('account_order') }}">Mes commandes</a> <br>
     <hr>
 {% endblock %}
