--- a/templates/account/order_show.html.twig
+++ b/templates/account/order_show.html.twig
@@ -8,6 +8,16 @@
 
     <hr>
 
+    <strong>Statut de la commande : </strong>
+    {% if order.state == 1 %}
+        Paiement accepté
+    {% elseif order.state == 2 %}
+        Préparation en cours
+    {% elseif order.state == 3 %}
+        Livraison en cours
+    {% endif %}
+    <br>
+
     <strong>Commande passé le :</strong> {{ order.createdAt|date('d/m/Y') }}<br>
     <strong>Référence de ma commande :</strong> {{ order.reference }}<br>
     <strong>Transporteur choisi :</strong> {{ order.carrierName }}
