--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,6 +9,10 @@
                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
             {% endif %}
 
+            {% for message in app.flashes('notice') %}
+                <div class="alert alert-info">{{ message }}</div>
+            {% endfor %}
+
             {% if app.user %}
                 <div class="mb-3">
                     You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
@@ -34,6 +38,7 @@
             <hr>
 
             <p class="text-center">
+                <a href="{{ path('reset_password') }}">Mot de passe oublié</a>
                 Ou <a href="{{ path('register') }}">Créer un compte</a>
             </p>
         </form>
